updates to instance filtering

--- a/notebooks/WT_test_d01_download_decompress_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_decompress_dicom.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
     "datadir = os.path.expanduser('/home/ubuntu/data/')\n",
     "sys.path.append(os.path.join(projectdir,'src'))\n",
     "\n",
-    "import d00_utils.dcm_utils as dcm_utils\n",
-    "from d00_utils.echocv_utils_v0 import *"
+    "import d02_intermediate.dcm_utils as dcm_utils\n",
+    "from d02_intermediate.download_dcm import s3_download_decomp_dcm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,34 @@
    "outputs": [],
    "source": [
     "# images, orig_images = dcm_utils.dcmdir_to_jpgs_for_segmentation(dcm_dir, '/home/ubuntu/data/01_raw/test/raw/a_113150_2WD5N6AS.dcm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/yoni/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'test_split50_downsampleby1000'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3_download_decomp_dcm(0.001)"
    ]
   },
   {
