--- a/notebooks/20190730_CI_create_gt_probabilities_textfile.ipynb
+++ b/notebooks/20190730_CI_create_gt_probabilities_textfile.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/courtney/usal_echo\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.d00_utils.db_utils import dbReadWriteViews"
+    "from src.d00_utils.db_utils import dbReadWriteViews\n",
+    "from src.d02_intermediate.create_seg_view import create_seg_view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create_seg_view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['machines_all_bmi', 'instances_with_labels_scrappy100', 'machines_new_bmi', 'instances_unlabeled', 'frames_sorted_by_views_temp', 'frames_w_labels', 'instances_unique_master_list', 'instances_w_labels_train', 'instances_w_conflicts', 'instances_w_labels_test', 'instances_w_labels', 'instances_w_labels_train_downsampleby5', 'instances_w_labels_test_downsampleby5', 'chords_by_volume_mask', 'frames_by_volume_mask']\n"
+     ]
+    }
+   ],
    "source": [
-    "table = io_views.get_table('frames_by_volume_mask')"
+    "io_views.list_tables()"
    ]
   },
   {
@@ -66,8 +92,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(table.shape)\n",
-    "print(table.head())"
+    "table_frames = io_views.get_table('frames_by_volume_mask')\n",
+    "table_chords = io_views.get_table('chords_by_volume_mask')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(table_frames.shape)\n",
+    "print(table_chords.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(table_chords.head())"
    ]
   },
   {
@@ -215,9 +260,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
