filter by instances_w_labels; write gt in nb

--- a/notebooks/20190808_YN_study_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_study_measurement_gt_eda.ipynb
@@ -389,10 +389,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3249: DtypeWarning: Columns (8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(72527, 9)\n"
+      "(858255, 10)\n"
      ]
     },
     {
@@ -416,96 +424,102 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>studyidk</th>\n",
+       "      <th>measabstractnumber</th>\n",
+       "      <th>meassequence</th>\n",
        "      <th>instanceidk</th>\n",
        "      <th>indexinmglist</th>\n",
-       "      <th>studyidk</th>\n",
-       "      <th>frame</th>\n",
-       "      <th>view_name</th>\n",
-       "      <th>view_exists</th>\n",
-       "      <th>view_only</th>\n",
-       "      <th>ventricle_only</th>\n",
-       "      <th>cycle_only</th>\n",
+       "      <th>value</th>\n",
+       "      <th>howentered</th>\n",
+       "      <th>srinstanceidk</th>\n",
+       "      <th>imagesopinstanceuid</th>\n",
+       "      <th>measurementuid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>57164</td>\n",
-       "      <td>1</td>\n",
        "      <td>2882</td>\n",
-       "      <td>15</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57164</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28.242271</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>58207</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2966</td>\n",
-       "      <td>8</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>188</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57164</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.897812</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>102950</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>189</td>\n",
        "      <td>0</td>\n",
-       "      <td>5898</td>\n",
-       "      <td>17</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
+       "      <td>57164</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85.725750</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>105943</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6085</td>\n",
-       "      <td>62</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57164</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87.190031</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>105951</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>191</td>\n",
        "      <td>0</td>\n",
-       "      <td>6086</td>\n",
-       "      <td>7</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
+       "      <td>57164</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.654466</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   instanceidk  indexinmglist  studyidk  frame   view_name view_exists  \\\n",
-       "0        57164              1      2882     15  a4c_ven_ed           t   \n",
-       "1        58207              1      2966      8  a4c_ven_ed           t   \n",
-       "2       102950              0      5898     17  a4c_ven_ed           t   \n",
-       "3       105943              1      6085     62  a4c_ven_ed           t   \n",
-       "4       105951              0      6086      7  a4c_ven_ed           t   \n",
+       "   studyidk  measabstractnumber  meassequence  instanceidk  indexinmglist  \\\n",
+       "0      2882                 187             0        57164              0   \n",
+       "1      2882                 188             0        57164              0   \n",
+       "2      2882                 189             0        57164              0   \n",
+       "3      2882                 190             0        57164              0   \n",
+       "4      2882                 191             0        57164              1   \n",
        "\n",
-       "  view_only ventricle_only cycle_only  \n",
-       "0       a4c            ven         ed  \n",
-       "1       a4c            ven         ed  \n",
-       "2       a4c            ven         ed  \n",
-       "3       a4c            ven         ed  \n",
-       "4       a4c            ven         ed  "
+       "       value  howentered srinstanceidk imagesopinstanceuid measurementuid  \n",
+       "0  28.242271           0                                                   \n",
+       "1   7.897812           0                                                   \n",
+       "2  85.725750           0                                                   \n",
+       "3  87.190031           0                                                   \n",
+       "4  36.654466           0                                                   "
       ]
      },
      "execution_count": 8,
@@ -514,9 +528,9 @@
     }
    ],
    "source": [
-    "frames_by_volume_mask_df = io_views.get_table('frames_by_volume_mask')\n",
-    "print(frames_by_volume_mask_df.shape)\n",
-    "frames_by_volume_mask_df.head()"
+    "a_measgraphref_df = io_clean.get_table(\"a_measgraphref\")\n",
+    "print(a_measgraphref_df.shape)\n",
+    "a_measgraphref_df.head()"
    ]
   },
   {
@@ -913,7 +927,7 @@
     }
    ],
    "source": [
-    "filter_df = filter_df[filter_df['studyidk'].isin(frames_by_volume_mask_df['studyidk'].unique())]\n",
+    "filter_df = filter_df[filter_df['studyidk'].isin(a_measgraphref_df['studyidk'].unique())]\n",
     "print(len(start_df))\n",
     "print(len(filter_df))\n",
     "print(len(filter_df)/len(start_df))"
