--- a/notebooks/20190808_YN_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_instance_measurement_gt_eda.ipynb
@@ -389,142 +389,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(72527, 9)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>instanceidk</th>\n",
-       "      <th>indexinmglist</th>\n",
-       "      <th>studyidk</th>\n",
-       "      <th>frame</th>\n",
-       "      <th>view_name</th>\n",
-       "      <th>view_exists</th>\n",
-       "      <th>view_only</th>\n",
-       "      <th>ventricle_only</th>\n",
-       "      <th>cycle_only</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>57164</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2882</td>\n",
-       "      <td>15</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>58207</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2966</td>\n",
-       "      <td>8</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>102950</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5898</td>\n",
-       "      <td>17</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>105943</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6085</td>\n",
-       "      <td>62</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>105951</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6086</td>\n",
-       "      <td>7</td>\n",
-       "      <td>a4c_ven_ed</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a4c</td>\n",
-       "      <td>ven</td>\n",
-       "      <td>ed</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   instanceidk  indexinmglist  studyidk  frame   view_name view_exists  \\\n",
-       "0        57164              1      2882     15  a4c_ven_ed           t   \n",
-       "1        58207              1      2966      8  a4c_ven_ed           t   \n",
-       "2       102950              0      5898     17  a4c_ven_ed           t   \n",
-       "3       105943              1      6085     62  a4c_ven_ed           t   \n",
-       "4       105951              0      6086      7  a4c_ven_ed           t   \n",
-       "\n",
-       "  view_only ventricle_only cycle_only  \n",
-       "0       a4c            ven         ed  \n",
-       "1       a4c            ven         ed  \n",
-       "2       a4c            ven         ed  \n",
-       "3       a4c            ven         ed  \n",
-       "4       a4c            ven         ed  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames_by_volume_mask_df = io_views.get_table('frames_by_volume_mask')\n",
-    "print(frames_by_volume_mask_df.shape)\n",
-    "frames_by_volume_mask_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -658,7 +522,7 @@
        "4  36.654466           0                                                   "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +656,7 @@
        "4  36.654466           0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +719,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +857,7 @@
        "84  292.888669           0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +979,7 @@
        "145  160.243074           0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1103,7 @@
        "149   69.452834           0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1133,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1184,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1310,7 @@
        "4      6086       105951              0  VTD(MDD-ps4)  160.243074"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1410,7 @@
        "4      6086       105951  VTD(MDD-ps4)  160.243074"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1515,7 @@
        "4      6086       105951              1  VTS(MDD-ps4)   69.452834"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1615,7 @@
        "4      6086       105951  VTS(MDD-ps4)   69.452834"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1733,7 @@
        "4      69.452834  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1909,7 +1773,7 @@
        "Name: ef, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1828,7 @@
        "Name: recommendation, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1851,7 @@
        "Name: recommendation, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2020,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2056,10 +1920,30 @@
     }
    ],
    "source": [
-    "filter_df = filter_df[filter_df['instanceidk'].isin(frames_by_volume_mask_df['instanceidk'].unique())]\n",
+    "filter_df = filter_df[filter_df['instanceidk'].isin(a_measgraphref_df['instanceidk'].unique())]\n",
     "print(start_df.shape)\n",
     "print(filter_df.shape)\n",
     "print(len(filter_df)/len(start_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(filter_df['studyidk'].unique())"
    ]
   },
   {
@@ -2079,32 +1963,12 @@
     }
    ],
    "source": [
-    "len(filter_df['studyidk'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "233"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "len(filter_df['instanceidk'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +1985,7 @@
        "Name: value_diastole, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2132,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2036,7 @@
        "Name: value_systole, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2087,7 @@
        "Name: ef, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2234,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2133,7 @@
        "Name: recommendation, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2156,7 @@
        "Name: recommendation, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2277,7 @@
        "1756      57.683639  56.373940       greyzone  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
