new measurement io object, writing to that

--- a/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
@@ -44,10 +44,10 @@
     }
    ],
    "source": [
-    "from d00_utils.db_utils import dbReadWriteClean, dbReadWriteViews, dbReadWriteSegmentation\n",
+    "from d00_utils.db_utils import dbReadWriteClean, dbReadWriteViews, dbReadWriteMeasurement\n",
     "io_clean = dbReadWriteClean()\n",
     "io_views = dbReadWriteViews()\n",
-    "io_segmentation = dbReadWriteSegmentation()"
+    "io_measurement = dbReadWriteMeasurement()"
    ]
   },
   {
@@ -979,7 +979,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_segmentation.save_to_db(ground_truths, \"ground_truths\")"
+    "io_measurement.save_to_db(ground_truths, \"ground_truths\")"
    ]
   }
  ],
