--- a/notebooks/WT_test_d03_classification_predict_view.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_view.ipynb
@@ -18,7 +18,11 @@
     "import pandas as pd\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(os.path.join(projectdir, 'src'))\n"
+    "sys.path.append(os.path.join(projectdir, 'src'))\n",
+    "\n",
+    "from d02_intermediate.download_dcm import s3_download_decomp_dcm\n",
+    "from d02_intermediate.dcm_utils import dcmdir_to_jpgs_for_classification\n",
+    "from d03_classification.predict_view import run_classify"
    ]
   },
   {
@@ -27,22 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import sys\n",
-    "\n",
-    "import os\n",
-    "import subprocess\n",
-    "import time\n",
-    "import cv2\n",
-    "import pydicom\n",
-    "from optparse import OptionParser\n",
-    "from shutil import rmtree\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from scipy.misc import imread\n",
-    "\n",
-    "from d00_utils.dcm_utils import dcmdir_to_jpgs_for_classification\n"
+    "dcm_dir_suffix = s3_download_decomp_dcm(0.001, 0.5, 'instances_w_labels')"
    ]
   },
   {
@@ -51,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = os.path.expanduser('~/data/01_raw/test')"
+    "dcm_dir = os.path.join(os.path.expanduser('~/data/01_raw/'), dcm_dir_suffix)\n",
+    "img_dir = os.path.join(os.path.expanduser('~/data/02_intermediate/'), dcm_dir_suffix)"
    ]
   },
   {
@@ -60,27 +50,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagedict = {}\n",
-    "predictions = {}\n",
-    "for filename in os.listdir(directory):\n",
-    "    if \"jpg\" in filename:\n",
-    "        image = imread(directory + filename, flatten=True).astype(\"uint8\")\n",
-    "        imagedict[filename] = [image.reshape((224, 224, 1))]\n",
-    "\n",
-    "tf.reset_default_graph()\n",
-    "sess = tf.Session()\n",
-    "model = vgg.Network(0.0, 0.0, feature_dim, label_dim, False)\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "\n",
-    "saver = tf.train.Saver()\n",
-    "saver.restore(sess, model_name)\n",
-    "\n",
-    "for filename in imagedict:\n",
-    "    predictions[filename] = np.around(\n",
-    "        model.probabilities(sess, imagedict[filename]), decimals=3\n",
-    "    )\n",
-    "\n",
-    "return predictions\n"
+    "dcmdir_to_jpgs_for_classification(dcm_dir, img_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = '/home/ubuntu/models/view_23_e5_class_11-Mar-2018'\n",
+    "predictions = run_classify(img_dir, 1, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_columns = ['output_' + x for x in view_classes]\n",
+    "df = pd.DataFrame.from_dict(predictions, columns=pred_columns, \n",
+    "                            orient='index').rename_axis('file_name').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['file_name'] = df['file_name'].apply(lambda x: x.split('.')[0])\n",
+    "df['study_id'] = df['file_name'].apply(lambda x: x.split('_')[1])\n",
+    "df['model_name'] = model_name\n",
+    "df['date_run'] = datetime.datetime.now()\n",
+    "cols = list(df.columns)\n",
+    "cols = cols[-2:] + cols[0:-2]\n",
+    "df = df[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view_classes = [\n",
+    "    \"plax_far\",\n",
+    "    \"plax_plax\",\n",
+    "    \"plax_laz\",\n",
+    "    \"psax_az\",\n",
+    "    \"psax_mv\",\n",
+    "    \"psax_pap\",\n",
+    "    \"a2c_lvocc_s\",\n",
+    "    \"a2c_laocc\",\n",
+    "    \"a2c\",\n",
+    "    \"a3c_lvocc_s\",\n",
+    "    \"a3c_laocc\",\n",
+    "    \"a3c\",\n",
+    "    \"a4c_lvocc_s\",\n",
+    "    \"a4c_laocc\",\n",
+    "    \"a4c\",\n",
+    "    \"a5c\",\n",
+    "    \"other\",\n",
+    "    \"rvinf\",\n",
+    "    \"psax_avz\",\n",
+    "    \"suprasternal\",\n",
+    "    \"subcostal\",\n",
+    "    \"plax_lac\",\n",
+    "    \"psax_apex\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now()"
    ]
   },
   {
