read table at the end of nb

--- a/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
@@ -22,36 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from d00_utils.db_utils import dbReadWriteViews\n",
-    "io_views = dbReadWriteViews()"
+    "from d00_utils.db_utils import dbReadWriteViews, dbReadWriteMeasurement\n",
+    "io_views = dbReadWriteViews()\n",
+    "io_measurement = dbReadWriteMeasurement()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "522\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "instances_w_labels_test_downsampleby5_df = io_views.get_table('instances_w_labels_test_downsampleby5')\n",
     "instances_w_labels_test_downsampleby5_df = instances_w_labels_test_downsampleby5_df[(instances_w_labels_test_downsampleby5_df['view']=='a2c') | (instances_w_labels_test_downsampleby5_df['view']=='a4c')]\n",
@@ -61,21 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3326: DtypeWarning: Columns (8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from d05_measurement.write_groundtruth import write_groundtruth\n",
     "write_groundtruth(instanceidks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ground_truths_df = io_measurement.get_table('ground_truths')\n",
+    "print(ground_truths_df.shape)\n",
+    "ground_truths_df.head()"
    ]
   }
  ],
