--- a/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(704, 6)\n"
+      "(937, 6)\n"
      ]
     },
     {
@@ -127,7 +127,7 @@
        "      <td>779540</td>\n",
        "      <td>1LHFYKEZ</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>45.964351</td>\n",
+       "      <td>45.9643513722676</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -136,7 +136,7 @@
        "      <td>779540</td>\n",
        "      <td>1LHFYKEZ</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
-       "      <td>17.993407</td>\n",
+       "      <td>17.993407423577</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -145,7 +145,7 @@
        "      <td>841585</td>\n",
        "      <td>7SQZPLEJ</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>124.449981</td>\n",
+       "      <td>124.449980552569</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -154,7 +154,7 @@
        "      <td>841585</td>\n",
        "      <td>7SQZPLEJ</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
-       "      <td>60.740148</td>\n",
+       "      <td>60.74014817013661</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -163,7 +163,7 @@
        "      <td>921901</td>\n",
        "      <td>EAKXA40T</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>91.569690</td>\n",
+       "      <td>91.5696899990777</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -172,11 +172,11 @@
       ],
       "text/plain": [
        "   study_id  instance_id file_name measurement_name  measurement_value  \\\n",
-       "0     43763       779540  1LHFYKEZ     VTD(MDD-ps4)          45.964351   \n",
-       "1     43763       779540  1LHFYKEZ     VTS(MDD-ps4)          17.993407   \n",
-       "2     46919       841585  7SQZPLEJ     VTD(MDD-ps4)         124.449981   \n",
-       "3     46919       841585  7SQZPLEJ     VTS(MDD-ps4)          60.740148   \n",
-       "4     50521       921901  EAKXA40T     VTD(MDD-ps4)          91.569690   \n",
+       "0     43763       779540  1LHFYKEZ     VTD(MDD-ps4)   45.9643513722676   \n",
+       "1     43763       779540  1LHFYKEZ     VTS(MDD-ps4)    17.993407423577   \n",
+       "2     46919       841585  7SQZPLEJ     VTD(MDD-ps4)   124.449980552569   \n",
+       "3     46919       841585  7SQZPLEJ     VTS(MDD-ps4)  60.74014817013661   \n",
+       "4     50521       921901  EAKXA40T     VTD(MDD-ps4)   91.5696899990777   \n",
        "\n",
        "  measurement_unit  \n",
        "0               mL  \n",
@@ -186,7 +186,7 @@
        "4               mL  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,122 +196,6 @@
     "print(ground_truths_df.shape)\n",
     "ground_truths_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>study_id</th>\n",
-       "      <th>instance_id</th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>measurement_name</th>\n",
-       "      <th>measurement_value</th>\n",
-       "      <th>measurement_unit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>699</th>\n",
-       "      <td>126098</td>\n",
-       "      <td>2985218</td>\n",
-       "      <td>EBITNLTE</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>64.646521</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>700</th>\n",
-       "      <td>126288</td>\n",
-       "      <td>2990141</td>\n",
-       "      <td>EDTICRZG</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>64.969289</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>701</th>\n",
-       "      <td>126751</td>\n",
-       "      <td>3003299</td>\n",
-       "      <td>FDNHKCYK</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>31.245536</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>702</th>\n",
-       "      <td>126772</td>\n",
-       "      <td>3003810</td>\n",
-       "      <td>FDNHO33T</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>74.126343</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>703</th>\n",
-       "      <td>126781</td>\n",
-       "      <td>3004026</td>\n",
-       "      <td>FDNHQ1M9</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>46.739345</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     study_id  instance_id file_name measurement_name  measurement_value  \\\n",
-       "699    126098      2985218  EBITNLTE      FE(MDD-ps4)          64.646521   \n",
-       "700    126288      2990141  EDTICRZG      FE(MDD-ps4)          64.969289   \n",
-       "701    126751      3003299  FDNHKCYK      FE(MDD-ps4)          31.245536   \n",
-       "702    126772      3003810  FDNHO33T      FE(MDD-ps4)          74.126343   \n",
-       "703    126781      3004026  FDNHQ1M9      FE(MDD-ps4)          46.739345   \n",
-       "\n",
-       "    measurement_unit  \n",
-       "699                %  \n",
-       "700                %  \n",
-       "701                %  \n",
-       "702                %  \n",
-       "703                %  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ground_truths_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
