--- a/notebooks/WT_test_d03_classification_predict_view.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_view.ipynb
@@ -16,13 +16,15 @@
     "import sys\n",
     "import os\n",
     "import pandas as pd\n",
+    "import datetime\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
     "sys.path.append(os.path.join(projectdir, 'src'))\n",
     "\n",
+    "from d00_utils.db_utils import dbReadWriteClassification\n",
     "from d02_intermediate.download_dcm import s3_download_decomp_dcm\n",
     "from d02_intermediate.dcm_utils import dcmdir_to_jpgs_for_classification\n",
-    "from d03_classification.predict_view import run_classify"
+    "import d03_classification.predict_view as predict_view"
    ]
   },
   {
@@ -60,7 +62,7 @@
    "outputs": [],
    "source": [
     "model_path = '/home/ubuntu/models/view_23_e5_class_11-Mar-2018'\n",
-    "predictions = run_classify(img_dir, 1, model_path)"
+    "feature_dim = 1"
    ]
   },
   {
@@ -69,9 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_columns = ['output_' + x for x in view_classes]\n",
-    "df = pd.DataFrame.from_dict(predictions, columns=pred_columns, \n",
-    "                            orient='index').rename_axis('file_name').reset_index()"
+    "predictions = predict_view.run_classify(img_dir, 1, model_path)"
    ]
   },
   {
@@ -80,12 +80,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['file_name'] = df['file_name'].apply(lambda x: x.split('.')[0])\n",
-    "df['study_id'] = df['file_name'].apply(lambda x: x.split('_')[1])\n",
-    "df['model_name'] = model_name\n",
-    "df['date_run'] = datetime.datetime.now()\n",
-    "cols = list(df.columns)\n",
-    "cols = cols[-2:] + cols[0:-2]\n",
+    "label_dim = len(predict_view.view_classes)\n",
+    "model_name = os.path.basename(model_path)\n",
+    "img_dir_basename = os.path.basename(img_dir)\n",
+    "\n",
+    "predictions = predict_view.classify(img_dir, feature_dim, label_dim, model_path)\n",
+    "\n",
+    "df_columns = [\"output_\" + x for x in predict_view.view_classes]\n",
+    "df = (\n",
+    "    pd.DataFrame.from_dict(predictions, columns=df_columns, orient=\"index\")\n",
+    "    .rename_axis(\"file_name\")\n",
+    "    .reset_index()\n",
+    ")\n",
+    "df[\"file_name\"] = df[\"file_name\"].apply(lambda x: x.split(\".\")[0])\n",
+    "df[\"study_id\"] = df[\"file_name\"].apply(lambda x: x.split(\"_\")[1])\n",
+    "df[\"model_name\"] = model_name\n",
+    "df[\"date_run\"] = datetime.datetime.now()\n",
+    "cols = [\"study_id\", \"file_name\", \"model_name\", \"date_run\"] + df_columns\n",
     "df = df[cols]"
    ]
   },
@@ -104,31 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "view_classes = [\n",
-    "    \"plax_far\",\n",
-    "    \"plax_plax\",\n",
-    "    \"plax_laz\",\n",
-    "    \"psax_az\",\n",
-    "    \"psax_mv\",\n",
-    "    \"psax_pap\",\n",
-    "    \"a2c_lvocc_s\",\n",
-    "    \"a2c_laocc\",\n",
-    "    \"a2c\",\n",
-    "    \"a3c_lvocc_s\",\n",
-    "    \"a3c_laocc\",\n",
-    "    \"a3c\",\n",
-    "    \"a4c_lvocc_s\",\n",
-    "    \"a4c_laocc\",\n",
-    "    \"a4c\",\n",
-    "    \"a5c\",\n",
-    "    \"other\",\n",
-    "    \"rvinf\",\n",
-    "    \"psax_avz\",\n",
-    "    \"suprasternal\",\n",
-    "    \"subcostal\",\n",
-    "    \"plax_lac\",\n",
-    "    \"psax_apex\",\n",
-    "]"
+    "io_classification = dbReadWriteClassification()"
    ]
   },
   {
@@ -137,8 +124,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "datetime.datetime.now()"
+    "io_classification.list_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_classification.get_table('predictions')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_classification.save_to_db(df[:0], \"predictions\", if_exists=\"replace\")"
    ]
   },
   {
