fixed yonis comments

--- a/notebooks/WT_test_d03_classification_predict_view.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_view.ipynb
@@ -43,16 +43,8 @@
    "outputs": [],
    "source": [
     "dcm_dir = os.path.join(os.path.expanduser('~/data/01_raw/'), dcm_dir_suffix)\n",
-    "img_dir = os.path.join(os.path.expanduser('~/data/02_intermediate/'), dcm_dir_suffix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcmdir_to_jpgs_for_classification(dcm_dir, img_dir)"
+    "img_dir = os.path.join(os.path.expanduser('~/data/02_intermediate/'), dcm_dir_suffix)\n",
+    "#dcmdir_to_jpgs_for_classification(dcm_dir, img_dir)"
    ]
   },
   {
@@ -62,7 +54,8 @@
    "outputs": [],
    "source": [
     "model_path = '/home/ubuntu/models/view_23_e5_class_11-Mar-2018'\n",
-    "feature_dim = 1"
+    "feature_dim = 1\n",
+    "#predictions = predict_view.run_classify(img_dir, feature_dim, model_path)"
    ]
   },
   {
@@ -70,9 +63,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predictions = predict_view.run_classify(img_dir, 1, model_path)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -80,50 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_dim = len(predict_view.view_classes)\n",
-    "model_name = os.path.basename(model_path)\n",
-    "img_dir_basename = os.path.basename(img_dir)\n",
-    "\n",
-    "predictions = predict_view.classify(img_dir, feature_dim, label_dim, model_path)\n",
-    "\n",
-    "df_columns = [\"output_\" + x for x in predict_view.view_classes]\n",
-    "df = (\n",
-    "    pd.DataFrame.from_dict(predictions, columns=df_columns, orient=\"index\")\n",
-    "    .rename_axis(\"file_name\")\n",
-    "    .reset_index()\n",
-    ")\n",
-    "df[\"file_name\"] = df[\"file_name\"].apply(lambda x: x.split(\".\")[0])\n",
-    "df[\"study_id\"] = df[\"file_name\"].apply(lambda x: x.split(\"_\")[1])\n",
-    "df[\"model_name\"] = model_name\n",
-    "df[\"date_run\"] = datetime.datetime.now()\n",
-    "cols = [\"study_id\", \"file_name\", \"model_name\", \"date_run\"] + df_columns\n",
-    "df = df[cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "io_classification = dbReadWriteClassification()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "io_classification = dbReadWriteClassification()\n",
     "io_classification.list_tables()"
    ]
   },
@@ -142,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_classification.save_to_db(df[:0], \"predictions\", if_exists=\"replace\")"
+    "#io_classification.save_to_db(df[:0], \"predictions\", if_exists=\"replace\")"
    ]
   },
   {
