added aggregation of predictions

--- a/notebooks/WT_test_d03_classification_predict_view.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_view.ipynb
@@ -55,15 +55,9 @@
    "source": [
     "model_path = '/home/ubuntu/models/view_23_e5_class_11-Mar-2018'\n",
     "feature_dim = 1\n",
-    "#predictions = predict_view.run_classify(img_dir, feature_dim, model_path)"
+    "if_exists='replace'\n",
+    "predictions = predict_view.run_classify(img_dir, model_path, if_exists, feature_dim)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -81,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_classification.get_table('predictions')"
+    "df = io_classification.get_table('predictions')\n",
+    "df.head()"
    ]
   },
   {
@@ -90,7 +85,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#io_classification.save_to_db(df[:0], \"predictions\", if_exists=\"replace\")"
+    "predict_view.agg_predictions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to overwrite existing predictions table\n",
+    "#io_classification.save_to_db(df.iloc[:0,:-1], \"predictions\", if_exists=\"replace\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_classification.raw_conn.rollback() #to reset after error"
    ]
   },
   {
