--- a/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_write_instance_measurement_gt_eda.ipynb
@@ -35,34 +35,13 @@
     }
    ],
    "source": [
-    "from d00_utils.db_utils import dbReadWriteViews, dbReadWriteMeasurement\n",
-    "io_views = dbReadWriteViews()\n",
+    "from d00_utils.db_utils import dbReadWriteMeasurement\n",
     "io_measurement = dbReadWriteMeasurement()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "522\n"
-     ]
-    }
-   ],
-   "source": [
-    "instances_w_labels_test_downsampleby5_df = io_views.get_table('instances_w_labels_test_downsampleby5')\n",
-    "instances_w_labels_test_downsampleby5_df = instances_w_labels_test_downsampleby5_df[(instances_w_labels_test_downsampleby5_df['view']=='a2c') | (instances_w_labels_test_downsampleby5_df['view']=='a4c')]\n",
-    "instanceidks = instances_w_labels_test_downsampleby5_df['instanceidk'].unique()\n",
-    "print(len(instanceidks))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,19 +55,19 @@
    ],
    "source": [
     "from d05_measurement.write_groundtruth import write_groundtruth\n",
-    "write_groundtruth(instanceidks)"
+    "write_groundtruth()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(937, 6)\n"
+      "(25109, 6)\n"
      ]
     },
     {
@@ -123,47 +102,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>43763</td>\n",
-       "      <td>779540</td>\n",
-       "      <td>1LHFYKEZ</td>\n",
+       "      <td>39531</td>\n",
+       "      <td>696112</td>\n",
+       "      <td>a_39531_8Z0BWZGH</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>45.9643513722676</td>\n",
+       "      <td>138.023153580371</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>43763</td>\n",
-       "      <td>779540</td>\n",
-       "      <td>1LHFYKEZ</td>\n",
+       "      <td>39531</td>\n",
+       "      <td>696112</td>\n",
+       "      <td>a_39531_8Z0BWZGH</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
-       "      <td>17.993407423577</td>\n",
+       "      <td>96.1217048828963</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>46919</td>\n",
-       "      <td>841585</td>\n",
-       "      <td>7SQZPLEJ</td>\n",
+       "      <td>39552</td>\n",
+       "      <td>696426</td>\n",
+       "      <td>a_39552_8ZGVB5TY</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>124.449980552569</td>\n",
+       "      <td>147.6939058118</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>46919</td>\n",
-       "      <td>841585</td>\n",
-       "      <td>7SQZPLEJ</td>\n",
+       "      <td>39552</td>\n",
+       "      <td>696426</td>\n",
+       "      <td>a_39552_8ZGVB5TY</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
-       "      <td>60.74014817013661</td>\n",
+       "      <td>65.1024746074442</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>50521</td>\n",
-       "      <td>921901</td>\n",
-       "      <td>EAKXA40T</td>\n",
+       "      <td>39553</td>\n",
+       "      <td>696438</td>\n",
+       "      <td>a_39553_8ZGVCN6C</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
-       "      <td>91.5696899990777</td>\n",
+       "      <td>122.502085154058</td>\n",
        "      <td>mL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -171,12 +150,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   study_id  instance_id file_name measurement_name  measurement_value  \\\n",
-       "0     43763       779540  1LHFYKEZ     VTD(MDD-ps4)   45.9643513722676   \n",
-       "1     43763       779540  1LHFYKEZ     VTS(MDD-ps4)    17.993407423577   \n",
-       "2     46919       841585  7SQZPLEJ     VTD(MDD-ps4)   124.449980552569   \n",
-       "3     46919       841585  7SQZPLEJ     VTS(MDD-ps4)  60.74014817013661   \n",
-       "4     50521       921901  EAKXA40T     VTD(MDD-ps4)   91.5696899990777   \n",
+       "   study_id  instance_id         file_name measurement_name measurement_value  \\\n",
+       "0     39531       696112  a_39531_8Z0BWZGH     VTD(MDD-ps4)  138.023153580371   \n",
+       "1     39531       696112  a_39531_8Z0BWZGH     VTS(MDD-ps4)  96.1217048828963   \n",
+       "2     39552       696426  a_39552_8ZGVB5TY     VTD(MDD-ps4)    147.6939058118   \n",
+       "3     39552       696426  a_39552_8ZGVB5TY     VTS(MDD-ps4)  65.1024746074442   \n",
+       "4     39553       696438  a_39553_8ZGVCN6C     VTD(MDD-ps4)  122.502085154058   \n",
        "\n",
        "  measurement_unit  \n",
        "0               mL  \n",
@@ -186,7 +165,7 @@
        "4               mL  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
