saving progress before training data download

--- a/notebooks/WT_test_d01_download_decompress_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_decompress_dicom.ipynb
@@ -35,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# update these\n",
     "dcm_dir = os.path.join(datadir, '01_raw','test')\n",
     "img_dir = os.path.join(datadir, '02_intermediate','test_images')"
    ]
