major changes to download decompress classify

--- a/notebooks/WT_test_d03_classification_predict_views.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_views.ipynb
@@ -17,14 +17,24 @@
     "import os\n",
     "import pandas as pd\n",
     "import datetime\n",
+    "import numpy as np\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
     "sys.path.append(os.path.join(projectdir, 'src'))\n",
     "\n",
-    "from d00_utils.db_utils import dbReadWriteClassification\n",
-    "from d02_intermediate.download_dcm import s3_download_decomp_dcm\n",
+    "from d00_utils.db_utils import dbReadWriteClassification, dbReadWriteViews\n",
+    "import d02_intermediate.download_dcm as download_dcm\n",
     "from d02_intermediate.dcm_utils import dcmdir_to_jpgs_for_classification\n",
-    "import d03_classification.predict_view as predict_view"
+    "import d03_classification.predict_views as predict_views\n",
+    "\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "from d00_utils.db_utils import dbReadWriteViews\n",
+    "from d00_utils.s3_utils import download_s3_objects\n",
+    "from d02_intermediate.dcm_utils import decompress_dcm\n",
+    "from d00_utils.log_utils import setup_logging\n",
+    "logger = setup_logging(__name__, __name__)\n"
    ]
   },
   {
@@ -33,7 +43,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dcm_dir_suffix = s3_download_decomp_dcm(0.001, 0.5, 'instances_w_labels')"
+    "downsample_ratio = 0.05\n",
+    "train_test_ratio = 0\n",
+    "table_name = 'instances_w_labels_train'\n",
+    "train = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_dir_suffix = download_dcm.s3_download_decomp_dcm(table_name, train_test_ratio, downsample_ratio, train)"
    ]
   },
   {
@@ -56,7 +78,7 @@
     "model_path = '/home/ubuntu/models/view_23_e5_class_11-Mar-2018'\n",
     "feature_dim = 1\n",
     "if_exists='replace'\n",
-    "predictions = predict_view.run_classify(img_dir, model_path, if_exists, feature_dim)"
+    "predictions = predict_views.run_classify(img_dir, model_path, if_exists, feature_dim)"
    ]
   },
   {
@@ -85,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict_view.agg_predictions()"
+    "predict_views.agg_predictions()"
    ]
   },
   {
