added evaluation for prediction

--- a/notebooks/PIPELINE_download_decompress_classify-views.ipynb
+++ b/notebooks/PIPELINE_download_decompress_classify-views.ipynb
@@ -16,6 +16,7 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
+    "import datetime\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
     "sys.path.append(os.path.join(projectdir, 'src'))\n",
@@ -66,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_classify(img_dir, model_path, if_exists='replace', feature_dim=1)"
+    "run_classify(img_dir, model_path, if_exists='append', feature_dim=1)"
    ]
   },
   {
@@ -75,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg_probabilities(if_exists='replace')"
+    "agg_probabilities(if_exists='append')"
    ]
   },
   {
@@ -111,7 +112,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate_views(dir_name, model_name, datetime.date.today(), study_filter=None, if_exists=\"append\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_class.get_table('evaluations')"
+   ]
   }
  ],
  "metadata": {
