update to pipeline notebooks

--- a/notebooks/PIPELINE_download_decompress_classify-views.ipynb
+++ b/notebooks/PIPELINE_download_decompress_classify-views.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manual pipeline for DCM download, decompress and classification of views"
+    "# Pipeline: Echocardiogram Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manual pipeline for DCM download, decompress and classification of views"
    ]
   },
   {
@@ -107,11 +114,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Manual pipeline for the segmentation of image files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from d02_intermediate.create_seg_view import create_seg_view \n",
+    "from d04_segmentation.segment_views import run_segment\n",
+    "from d04_segmentation.generate_masks import write_masks\n",
+    "from d04_segmentation.evalute_masks import evaluate_masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_segment(dir_name, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_seg_view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_masks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_masks()"
+   ]
   }
  ],
  "metadata": {
