--- a/notebooks/20190815_YN_retrieve_meas.ipynb
+++ b/notebooks/20190815_YN_retrieve_meas.ipynb
@@ -172,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_yoni)",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "conda_yoni"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
