updates to pipeline notebook

--- a/notebooks/PIPELINE_download_decompress_classify-views.ipynb
+++ b/notebooks/PIPELINE_download_decompress_classify-views.ipynb
@@ -53,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_name = s3_download_decomp_dcm(dcm_path, table_name, train_test_ratio, downsample_ratio, train)"
+    "#dir_name = s3_download_decomp_dcm(dcm_path, table_name, train_test_ratio, downsample_ratio, train)\n",
+    "dir_name = 'test_split50_downsampleby1000'"
    ]
   },
   {
@@ -115,6 +116,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_views(dir_name, model_name, datetime.date.today(), study_filter=None, if_exists=\"append\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_class.get_table('evaluations')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,9 +147,9 @@
    "outputs": [],
    "source": [
     "from d02_intermediate.create_seg_view import create_seg_view \n",
-    "from d04_segmentation.segment_views import run_segment\n",
-    "from d04_segmentation.generate_masks import write_masks\n",
-    "from d04_segmentation.evalute_masks import evaluate_masks"
+    "from d04_segmentation.segment_view import run_segment\n",
+    "from d04_segmentation.generate_masks import generate_masks\n",
+    "from d04_segmentation.evaluate_masks import evaluate_masks"
    ]
   },
   {
@@ -139,7 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_segment(dir_name, model_path)"
+    "dcm_dir = os.path.join(dcm_path, dir_name)\n",
+    "dcm_dir"
    ]
   },
   {
@@ -148,8 +168,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_views(dir_name, model_name, datetime.date.today(), study_filter=None, if_exists=\"append\")"
-    "io_class.get_table('evaluations')"
+    "model_path = os.path.join(os.path.expanduser('~/models'))\n",
+    "run_segment(dcm_dir, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "create_seg_view()"
    ]
   },
@@ -159,7 +187,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_masks()"
+    "io_views = db.dbReadWriteViews()\n",
+    "io_views.list_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_views.get_table('frames_by_volume_mask').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_views.get_table('chords_by_volume_mask').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_masks(dcm_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_segmentation = db.dbReadWriteSegmentations()\n",
+    "io_segmentation.list_tables()"
    ]
   },
   {
@@ -174,9 +240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_usal_echo)",
+   "display_name": "Environment (conda_courtney)",
    "language": "python",
-   "name": "conda_usal_echo"
+   "name": "conda_courtney"
   },
   "language_info": {
    "codemirror_mode": {
